--- a/udg/pixelart/index.html
+++ b/udg/pixelart/index.html
@@ -25,53 +25,9 @@
  */
 -->
 <head>
-  <meta charset="utf-8">
-  <style>
-    body,
-    canvas {
-      margin: auto auto auto auto;
-      display: block;
-      background-color: #4f648b;
-    }
-    main {
-      padding-top: 5rem;
-      height: 30rem;
-      width: 50rem;
-      border: .1rem dotted;
-      background-color: #A2A6B2;
-    }
-    canvas {
-      background-color: #fff !important;
-      border: .1rem solid black;
-    }
-
-    nav {
-      background-color: #6369d1;
-      position: fixed;
-      right: 0rem;
-      border-left: .5rem solid #d8d2e1;
-      padding-left: 1rem;
-      padding-right: 1rem;
-
-      padding-top: 1.5rem;
-      height: 100%;
-      width: 10rem;
-    }
-
-    h1 {
-      color: white;
-    }
-
-    p {
-      color: #fff;
-
-      font-size: 0.8em !important;
-    }
-    button, .btn {
-      font-size: 0.8em !important;
-    }
-  </style>
-  <link rel="stylesheet" href="./buttons.css">
+  <meta charset="utf-8">>
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/buttons.css">
 </head>
 
 <body>
@@ -100,44 +56,14 @@
   </nav>
 </body>
 
-<script src="Rects.js"></script>
-<script src="SVGgrid.js"></script>
-<script src="main.js"></script>
-<script>canvasElem.addEventListener("mousedown", function (e) {
-    let coords = getMousePosition(canvasElem, e);
-    if(!CONFIG.customColor)
-      Rec.fillStyle = getRandomColorRGBA()
-    Rec.fillShape(coords.x, coords.y);
-    dragged = true;
-    Rec.setPrevious(coords.x, coords.y);
-    canvasElem.addEventListener("mousemove", draggedDraw);
-  });
+<script>
+var DEBUGVAR = false;
+</script>
 
-  canvasElem.addEventListener("mouseup", function (e) {
-    dragged = false;
-    canvasElem.removeEventListener("mousemove", draggedDraw);
-  });
-  var ColorPicker = document.getElementById("kb_selected_color");
-  ColorPicker.addEventListener("input", function() {
-
-// Farcode (Hex) schreiben
-document.getElementById("kb_selected_color").style.background = ColorPicker.value;
-CONFIG.customColor=ColorPicker.value;
-Rec.fillStyle = CONFIG.customColor;
-}, false);
-
-document.getElementById('png').addEventListener('click', function() {
-    downloadCanvas(this, canvasElem, 'art.png', "image/png");
-}, false);
-
-document.getElementById('jpg').addEventListener('click', function() {
-    downloadCanvas(this, canvasElem, 'art.jpg', "image/jpeg");
-}, false);
-
-
-document.getElementById('bmp').addEventListener('click', function() {
-    downloadCanvas(this, canvasElem, 'art.bmp', "image/bmp");
-}, false);
-  </script>
+<script src="js/html.js"></script>
+<script src="js/Rects.js"></script>
+<script src="js/SVGgrid.js"></script>
+<script src="js/main.js"></script>
+<script src="js/events.js"></script>
 
 </html>
