--- a/udg/pixelart/index.html
+++ b/udg/pixelart/index.html
@@ -22,17 +22,16 @@
  * COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN
  * AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH
  * THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
- */
--->
+ */ -->
 <head>
-  <meta charset="utf-8">>
+  <meta charset="utf-8">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/buttons.css">
 </head>
 
 <body>
   <header>
-    <h1>Pixel-Draw</h2>
+    <h2>Pixel-Draw</h2>
   </header>
   <main>
   <canvas id="canvas" width="300px" height="300px" style="background: #fff;"></canvas>
@@ -44,8 +43,8 @@
     <button class="btn btn--stripe" onclick="CONFIG.customColor=false">Random Colors!</button>
   <p>Set Grid Size: </p>
   <button class="btn btn--stripe" onclick="GenericGrid(Rec, SVG, 1)" value="change size">8x8</button>
-  <button class="btn btn--stripe" onclick="SixteenGrid()" value="change size">16x16</button>
-  <button class="btn btn--stripe" onclick="Thirty()" value="change size">32x32</button>
+  <button class="btn btn--stripe" onclick="GenericGrid(Rec, SVG, 2)" value="change size">16x16</button>
+  <button class="btn btn--stripe" onclick="GenericGrid(Rec, SVG, 4)" value="change size">32x32</button>
   <p>Draw/Grid Functions: </p>
   <button class="btn btn--stripe" id="fillToggle" onclick="fillFunc(document.getElementById('fillToggle'))" value="Flood Fill!">Flood Fill!</button>
   <button class="btn btn--stripe" id="gridtoggle" onclick="SVG.toggle(toggleButton)">Hide grid!</button>
